[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "echox"
description = "Tool to backup Echo360 videos"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "lxml",
    "click",
]
version = "0.0.2"

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
echox = "echox.cli:cli"

[tool.setuptools]
packages = ["echox"]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"